# sgx-dcap-attestation-rust

./: .gitignore  Cargo.toml
enclave-test/: Makefile.toml  rust-toolchain.toml
enclave-test/app/: Cargo.toml  Makefile
enclave-test/app/codegen/: Enclave_u.c  Enclave_u.h  Enclave_u.rs
enclave-test/app/src/: main.rs
enclave-test/enclave/: Cargo.toml  Enclave.edl  Makefile
enclave-test/enclave/codegen/: Enclave_t.c  Enclave_t.h
enclave-test/enclave/src/: lib.rs
sgx-dcap-ql-sys/: Cargo.toml  build.rs
sgx-dcap-ql-sys/src/: bindings.rs  lib.rs
src/: lib.rs  quoting_enclave.rs
