[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "template-enclave"
version = "0.1.0"
edition = "2018"
authors = ["The Teaclave Authors"]

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"] }
sgx_tse = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
